pyk/src/tests/kore/test-data/definitions/pass/user-nat.kore
[]
    module Nat
            sort Nat{}[]
            symbol zero{}():Nat{}[]
            symbol succ{}(Nat{}):Nat{}[]
    endmodule
    []
