pyk/src/tests/kore/test-data/definitions/should-fail/test-bool-2.kore
[]
module BOOL
    hooked-sort Bool{s} [hook{}("BOOL.Bool")]
    hooked-symbol andBool{s}(Bool{s}, Bool{s}) : Bool{s} [hook{}("BOOL.and")]
endmodule
[]
